# tv-managing-system

./: .gitignore  README.md  TODO.md  icon.ai
.github/workflows/: endpoint-build-test.yml  server-build-test.yml
client/: .gitignore  CMakeLists.txt  Makefile  TMSC.aip  authwindow.cpp  authwindow.ui  clientsocketqt.cpp  connectwindow.cpp  connectwindow.ui  endpointmanager.cpp  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc
client-old/: Makefile  main.cpp
client-old/include/: clientsocket_win.h  logger.h  windowmanager.h
client-old/src/: clientsocket_win.cpp  logger.cpp
client/include/: authwindow.h  clientsocket_win.h  clientsocketqt.h  connectwindow.h  endpointmanager.h  logger.h  loglevel.h  mainwindow.h  windowmanager.h
client/src/: clientsocket_win.cpp  logger.cpp  windowmanager.cpp
endpoint/: Makefile  authkey.def  main.cpp  settings.cfg.def
endpoint/include/: commandfunctions.h  endpointserversettings.h  settingsmanager.h  slideshowmanager.h  windowmanager.h
endpoint/src/: commandfunctions.cpp  settingsmanager.cpp  signalcallbacks.cpp  slideshowmanager.cpp  windowmanager.cpp
server/: Makefile  config.cpp  configloader.cpp  example_config.cfg  main.cpp  serversocket.cpp  settings.cfg.def  signalcallbacks.cpp  tmsd.service
server/include/: actionqueue.h  authmanager.h  authsock.h  clientsocket.h  command.h  commandfunctions.h  commandhandler.h  config.h  configloader.h  endpointconnection.h  endpointmanager.h  endpointsettings.h  serializer.h  serversettings.h  serversocket.h  signalcallbacks.h
server/src/: actionqueue.cpp  authmanager.cpp  clientsocket.cpp  commandfunctions.cpp  commandhandler.cpp  endpointmanager.cpp  serializer.cpp  serversocket.cpp  signalcallbacks.cpp
shared/include/: authsock.h  command.h  commandhandler.h  config.h  configloader.h  endpointsettings.h  serializer.h  serversocket.h  signalcallbacks.h
shared/src/: authmanager.cpp  commandhandler.cpp  config.cpp  configloader.cpp  endpointsettings.cpp  serializer.cpp  serversocket.cpp
